--- a/Greeting Card/HappyChineseNewYear.html
+++ b/Greeting Card/HappyChineseNewYear.html
@@ -19,6 +19,6 @@
     <body>
         <img src="https://media1.tenor.com/images/8f80e37101416505f1a0c264d87454d0/tenor.gif " width="300" length="320"></br>
         <img src="https://i.giphy.com/media/fUvqcWaEotKfruHHdx/giphy.webp"></br>
-        <a target="_blank" href="https://web.whatsapp.com/send?text=Happy Chinese New Year, clisk here: HappyNewYear.html" data-original-title="whatsapp" rel="tooltip" data-placement="left" data-action="share/whatsapp/share"><img src="https://pbs.twimg.com/profile_images/1318652224638124032/wrpp2Nl4_400x400.png" width="150" length="150"></a>
+        <a target="_blank" href="https://web.whatsapp.com/send?text=Happy Chinese New Year, clisk here: https://loihao.github.io/Greeting-Card/Greeting%20Card/HappyChineseNewYear.html" data-original-title="whatsapp" rel="tooltip" data-placement="left" data-action="share/whatsapp/share"><img src="https://pbs.twimg.com/profile_images/1318652224638124032/wrpp2Nl4_400x400.png" width="150" length="150"></a>
     </body>  
 </html>
