--- a/Greeting Card/HariRaya.html
+++ b/Greeting Card/HariRaya.html
@@ -3,7 +3,7 @@
         <title>Happy hari raya haji!</title>
         <style>
             html {    
-    background: url('https://lh3.googleusercontent.com/proxy/PvnQJv8fZpzZB-rfsK1dJrSJjB_EAOdvNADDC6U1v8dgFT6hmxtP310kauCwzS13mrx7E3jy3rLjH4dz6PQD5tLN87QaxZXQKIF7DpXqUOpeG3a8OkLdV1hXu-kfFaujGJM') no-repeat center fixed;     
+    background: url('https://static.vecteezy.com/system/resources/thumbnails/000/524/605/original/HARI_RAYA.jpg') no-repeat center fixed;     
     background-size: cover;
 }
             img {
@@ -18,6 +18,6 @@
     </head>
     <body>
         <img src="https://i.pinimg.com/originals/63/5e/6b/635e6bd94abb3566319fb75860fb9ab0.gif" width="300" length="320"></br>
-        <a target="_blank" href="https://web.whatsapp.com/send?text=Happy Hari Raya Haji, clisk here: HariRaya.html" data-original-title="whatsapp" rel="tooltip" data-placement="left" data-action="share/whatsapp/share"><img src="https://pbs.twimg.com/profile_images/1318652224638124032/wrpp2Nl4_400x400.png" width="150" length="150"></a>
+        <a target="_blank" href="https://web.whatsapp.com/send?text=Happy Hari Raya Haji, clisk here: https://loihao.github.io/Greeting-Card/Greeting%20Card/HariRaya.html" data-original-title="whatsapp" rel="tooltip" data-placement="left" data-action="share/whatsapp/share"><img src="https://pbs.twimg.com/profile_images/1318652224638124032/wrpp2Nl4_400x400.png" width="150" length="150"></a>
     </body>  
 </html>
