--- a/Greeting Card/HappyChineseNewYear.html
+++ b/Greeting Card/HappyChineseNewYear.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Happy Chinses New Year</title>
+        <title>Happy Chinese New Year!</title>
         <style>
             html {    
     background: url('https://i.pinimg.com/originals/38/ad/4f/38ad4f1f3c016aca85a59432c1f8d59d.jpg') no-repeat center fixed;     
